@@ -21,6 +21,9 @@ documents those changes that are of interest to users and administrators.
  -- Remove slurm.spec-legacy packaging file.
  -- pam_slurm_adopt - with action_unknown=newest configured, pick a user job
     even when failing to get cgroup mtime.
+ -- EnforcePartLimits applies now not only to partition limits, but also to 
+    hardware resources (nodes) configuration. The default value was changed
+    from NO to ANY.
 
 * Changes in Slurm 19.05.3
 ==========================
